openshift/openshiftstack/application/kfp-tekton/overlays/servicemesh/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ml-pipeline-ui
  namespace: kubeflow
spec:
  gateways:
    - kubeflow-gateway
  hosts:
    - '*'
  http:
    - match:
        - uri:
            prefix: /pipeline
      rewrite:
        uri: /pipeline
      route:
        - destination:
            host: ml-pipeline-ui.kubeflow.svc.cluster.local
            port:
              number: 80
      timeout: 300s
